--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <script>
         setTimeout(() => {
-            window.location.href = '/main';
+            window.location.href = 'main.html';
         }, 3000);
     </script>
     <script src="script.js"></script>
