--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <button id="start-bot-button">Start Bot</button>
     <script>
         document.getElementById('start-bot-button').addEventListener('click', () => {
-            window.location.href = '/bot';
+            window.location.href = 'bot.html';
         });
     </script>
 </body>
